--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "gulp-watch": "^4.3.11"
   },
   "dependencies": {
+    "deep-extend": "^0.6.0",
     "hoek": "^5.0.3",
-    "npm": "^6.4.1"
+    "npm": "^6.4.1",
+    "randomatic": "^3.1.0"
   }
 }
